--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "latest",
     "react": "^18.2.0",
